# 0029-svs-mock

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  mock_certs.toml  projectplan.md
.github/workflows/: release.yml
docs/: api.html  config.html  error-codes.md  guide.html  index.html
docs/assets/: style.css
examples/: gen_test_data.rs
src/: cert_store.rs  config.rs  error.rs  main.rs  proto.rs
src/routes/: cert.rs  digest.rs  envelope.rs  mod.rs  sign.rs  stub.rs  verify.rs
src/service/: cert_ops.rs  cms_ops.rs  crypto_ops.rs  mod.rs
