[package]
name = "svs-mock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "svs-mock"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
toml = "0.8"
libsmx = "0.3"
x509-cert = "0.2"
der = "0.7"
hex = "0.4"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
anyhow = "1"
serde_urlencoded = "0.7"
